Update Project Name

--- a/EzLytics NuGet/EzLytics NuGet/EzLytics.csproj
+++ b/EzLytics NuGet/EzLytics NuGet/EzLytics.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netstandard2.0</TargetFramework>
     <RootNamespace>EzLytics_NuGet</RootNamespace>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
   </PropertyGroup>
 
 </Project>
